Fix alignment in duplications

--- a/sonar-server/src/main/webapp/stylesheets/style.css
+++ b/sonar-server/src/main/webapp/stylesheets/style.css
@@ -893,7 +893,7 @@ span.rulename a:hover {
 }
 
 .duplications td.item p {
-  padding: 3px 10px;
+  padding: 3px 5px;
 }
 
 .duplications td.fileItem {
